# materials

./: .gitignore  README.md  data_change.md  pyproject.toml
src/materials/: __init__.py  colors.py  columns.py  dataframes.py  interfaces.py  paths.py  plots.py  theme.py
static/_01_inputs/companies/: README.md  companies.json
static/_01_inputs/nrmca_2023/: README.md  nrmca_2023.json
static/data/companies/: README.md  companies.json
static/data/nmrca_2023/: README.md  nrmca_2023.json
