[project]
name = "materials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jul29iet@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "polars>=1.32.0",
    "pyprojroot>=0.3.0",
    "utils4plans>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
